hphp/test/slow/record-type-hints/invalid-field-type4.php.expectf
Fatal error: Invalid record field type hint for 'x' in %s/invalid-field-type4.php on line 3
